# genetic_tsp-knapsack

./: .gitignore  genetic.cabal  tspGenetico.hs
.stack-work/install/x86_64-linux-ncurses6/lts-8.20/8.0.2/flag-cache/: HUnit-1.5.0.0-DvjF79OHhCC7SzfeEty4OI  MonadRandom-0.5.1-IY6HiWu00vQLARukQW3KMH  QuickCheck-2.9.2-Jyj4gc4JxkEIgGFLAsGhs9  ansi-terminal-0.6.3.1-3RTqikoQf47ajVD9m8zgB  async-2.1.1.1-8yywY4inVGRLJSCg60gBXj  call-stack-0.1.0-FYVrCPXGP9EGAuTW32963O  fail-4.9.0.0-FGE8TmYPyfd2ZUpoMVx9sD  genetic-0.1.0.0-4Qteo4SiaPs2YiyYDVTgEQ  genetic-0.1.0.0-6BCsZpAGgtkGCX3Gf9uz6b  hspec-2.4.3-1FDnT5qa4j3Kk2ZAmhP9xh  hspec-core-2.4.3-4aSW6vl2zjIEbOOJG9KdQp  hspec-discover-2.4.3-CG2f3yt4qi61oj48M1aJup  hspec-expectations-0.8.2-DujBeQFEMmfJJRLad7XQgd  mtl-2.2.1-BLKBelFsPB3BoFeSWSOYj6  primitive-0.6.1.0-6AbSTw9JXz141LE5p6LGH  quickcheck-io-0.1.4-C5t3MfRsr5zrFam5nRAFy  random-1.1-9tceXaeYIMZ4JrKq20Egog  setenv-0.1.1.3-8dEhk6JWvlmCmVyBammSpu  stm-2.4.4.1-JQn4hNPyYjP5m9AcbI88Ve  tf-random-0.5-BGjMgO8m67W8CHiEl15kZ7  transformers-compat-0.5.1.4-IuFogs8HAVUJBWVNMhtssu  vector-0.11.0.0-LMwQhhnXj8U3T5Bm1JFxG
.stack-work/install/x86_64-linux-ncurses6/lts-8.20/8.0.2/lib/x86_64-linux-ghc-8.0.2/genetic-0.1.0.0-4Qteo4SiaPs2YiyYDVTgEQ/: Knapsack.hi
.stack-work/install/x86_64-linux-ncurses6/lts-8.20/8.0.2/lib/x86_64-linux-ghc-8.0.2/genetic-0.1.0.0-6BCsZpAGgtkGCX3Gf9uz6b/: Genetic.dyn_hi  Genetic.hi  Knapsack.dyn_hi  Knapsack.hi
.stack-work/install/x86_64-linux-ncurses6/lts-8.20/8.0.2/pkgdb/: genetic-0.1.0.0-4Qteo4SiaPs2YiyYDVTgEQ.conf  package.cache
.stack-work/odir/: Genetic.hi  Knapsack.hi  Main.hi
app/: Main.hs
src/: Genetic.hs  Knapsack.hs  Tsp.hs
src/Dataset/: Tsp.hs
test/: KnapsackSpec.hs  TspSpec.hs
